--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title></title>
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="./text-bill-factory.js" charset="utf-8"></script>
+    <script src="./settings-bill-factory.js" charset="utf-8"></script>
+
+    <script src="./js/text-bill.js" charset="utf-8"></script>
+    <script src="./js/radio-bill.js" charset="utf-8"></script>
+    <script src="./js/settings-bill.js" charset="utf-8"></script>
   </head>
   <body>
     <div class="container">
@@ -229,8 +235,5 @@
       </div>
     </div>
     <script src="./js/calculate-bill.js" charset="utf-8"></script>
-    <script src="./js/text-bill.js" charset="utf-8"></script>
-    <script src="./js/radio-bill.js" charset="utf-8"></script>
-    <script src="./js/settings-bill.js" charset="utf-8"></script>
   </body>
 </html>
