changed the test setup and changed radio settings factory

--- a/index-test.html
+++ b/index-test.html
@@ -17,14 +17,14 @@
     </script>
     <!-- the function to be tested -->
     <script src="./js/calculate-bill.js" charset="utf-8"></script>
-    <!--
-    <script src="./js/text-bill.js" charset="utf-8"></script>
-    <script src="./js/radio-bill.js" charset="utf-8"></script>
-    <script src="./js/settings-bill.js" charset="utf-8"></script> -->
+    <script src="./test/calculate-bill-test.js" charset="utf-8"></script>
+    <script src="./test/text-bill-test.js" charset="utf-8"></script>
+    <script src="./test/radio-bill-test.js" charset="utf-8"></script>
+    <script src="./test/settings-bill-test.js" charset="utf-8"></script>
 
-    <script src="./text-bill-factory.js" charset="utf-8"></script>
-    <script src="./settings-bill-factory.js" charset="utf-8"></script>
-    <script src="./test/logic-tests.js" charset="utf-8"></script>
+
+    <script src="./js/text-bill-factory.js" charset="utf-8"></script>
+    <script src="./js/settings-bill-factory.js" charset="utf-8"></script>
     <script>
         <!-- configure and run mocha -->
         mocha.checkLeaks();
