--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title></title>
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="./text-bill-factory.js" charset="utf-8"></script>
-    <script src="./settings-bill-factory.js" charset="utf-8"></script>
+    <script src="./js/text-bill-factory.js" charset="utf-8"></script>
+    <script src="./js/settings-bill-factory.js" charset="utf-8"></script>
 
     <script src="./js/text-bill.js" charset="utf-8"></script>
     <script src="./js/radio-bill.js" charset="utf-8"></script>
